--- a/WebApp/Views/Blog/Index.cshtml
+++ b/WebApp/Views/Blog/Index.cshtml
@@ -83,12 +83,6 @@
                             <button type="button" id="load-more-news" data-total-page="@Model.TotalPages">Load more</button>
                         </div>
                     }
-                    
-                    @* <nav class="blog-pagination justify-content-center d-flex">
-                        <ul class="pagination">
-                            <button>Load more</button>
-                        </ul>
-                    </nav> *@
                 </div>
             </div>
             <div class="col-lg-4">
@@ -102,19 +96,7 @@
                         </div><!-- /input-group -->
                         <div class="br"></div>
                     </aside>
-                    <aside class="single_sidebar_widget author_widget">
-                        <img class="author_img rounded-circle" src="~/assets/landing-page/image/blog/author.png" alt="">
-                        <h4>Charlie Barber</h4>
-                        <p>Senior blog writer</p>
-                        <div class="social_icon">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
-                        <p>Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.</p>
-                        <div class="br"></div>
-                    </aside>
+                    
                     <aside class="single_sidebar_widget popular_post_widget">
                         <h3 class="widget_title">Popular Posts</h3>
                         <div class="media post_item">
@@ -123,82 +105,15 @@
                                 <a href="blog-details.html"><h3>Space The Final Frontier</h3></a>
                                 <p>02 Hours ago</p>
                             </div>
-                        </div>
-                        <div class="media post_item">
-                            <img src="~/assets/landing-page/image/blog/post2.jpg" alt="post">
-                            <div class="media-body">
-                                <a href="blog-details.html"><h3>The Amazing Hubble</h3></a>
-                                <p>02 Hours ago</p>
-                            </div>
-                        </div>
-                        <div class="media post_item">
-                            <img src="~/assets/landing-page/image/blog/post3.jpg" alt="post">
-                            <div class="media-body">
-                                <a href="blog-details.html"><h3>Astronomy Or Astrology</h3></a>
-                                <p>03 Hours ago</p>
-                            </div>
-                        </div>
-                        <div class="media post_item">
-                            <img src="~/assets/landing-page/image/blog/post4.jpg" alt="post">
-                            <div class="media-body">
-                                <a href="blog-details.html"><h3>Asteroids telescope</h3></a>
-                                <p>01 Hours ago</p>
-                            </div>
-                        </div>
+                        </div>                      
                         <div class="br"></div>
                     </aside>
+
                     <aside class="single_sidebar_widget ads_widget">
-                        <a href="#"><img class="img-fluid" src="~/assets/landing-page/image/blog/add.jpg" alt=""></a>
+                        <a href="#"><img class="img-fluid" src="https://media-static.cdnproz1.online/cakhiastatic/weblanding/TA88-400x400-1.gif" alt=""></a>
                         <div class="br"></div>
-                    </aside>
-                    <aside class="single_sidebar_widget post_category_widget">
-                        <h4 class="widget_title">Post Catgories</h4>
-                        <ul class="list_style cat-list">
-                            <li>
-                                <a href="#" class="d-flex justify-content-between">
-                                    <p>Technology</p>
-                                    <p>37</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex justify-content-between">
-                                    <p>Lifestyle</p>
-                                    <p>24</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex justify-content-between">
-                                    <p>Fashion</p>
-                                    <p>59</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex justify-content-between">
-                                    <p>Art</p>
-                                    <p>29</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex justify-content-between">
-                                    <p>Food</p>
-                                    <p>15</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex justify-content-between">
-                                    <p>Architecture</p>
-                                    <p>09</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex justify-content-between">
-                                    <p>Adventure</p>
-                                    <p>44</p>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="br"></div>
-                    </aside>
+                    </aside>    
+                    
                     <aside class="single-sidebar-widget newsletter_widget">
                         <h4 class="widget_title">Newsletter</h4>
                         <p>
@@ -216,24 +131,7 @@
                         </div>
                         <p class="text-bottom">You can unsubscribe at any time</p>
                         <div class="br"></div>
-                    </aside>
-                    <aside class="single-sidebar-widget tag_cloud_widget">
-                        <h4 class="widget_title">Tag Clouds</h4>
-                        <ul class="list_style">
-                            <li><a href="#">Technology</a></li>
-                            <li><a href="#">Fashion</a></li>
-                            <li><a href="#">Architecture</a></li>
-                            <li><a href="#">Fashion</a></li>
-                            <li><a href="#">Food</a></li>
-                            <li><a href="#">Technology</a></li>
-                            <li><a href="#">Lifestyle</a></li>
-                            <li><a href="#">Art</a></li>
-                            <li><a href="#">Adventure</a></li>
-                            <li><a href="#">Food</a></li>
-                            <li><a href="#">Lifestyle</a></li>
-                            <li><a href="#">Adventure</a></li>
-                        </ul>
-                    </aside>
+                    </aside>                 
                 </div>
             </div>
         </div>
