--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -193,7 +193,7 @@
         </div>
         <div class="testimonial_slider owl-carousel">
             <div class="media testimonial_item">
-                <img class="rounded-circle" src="~/assets/landing-page/image/testtimonial-1.jpg" alt="">
+                <img class="rounded-circle" src="~/uploaded/images/20240331/Screenshot 2023-11-18 203128.png" alt="" width="60" height="60">
                 <div class="media-body">
                     <p>As conscious traveling Paupers we must always be concerned about our dear Mother Earth. If you think about it, you travel across her face, and She is the </p>
                     <a href="#"><h4 class="sec_h4">Fanny Spencer</h4></a>
@@ -207,7 +207,7 @@
                 </div>
             </div>
             <div class="media testimonial_item">
-                <img class="rounded-circle" src="~/assets/landing-page/image/testtimonial-1.jpg" alt="">
+                <img class="rounded-circle" src="~/uploaded/images/20240331/Screenshot 2024-01-23 205528.png" alt="" width="60" height="60">
                 <div class="media-body">
                     <p>As conscious traveling Paupers we must always be concerned about our dear Mother Earth. If you think about it, you travel across her face, and She is the </p>
                     <a href="#"><h4 class="sec_h4">Fanny Spencer</h4></a>
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div class="media testimonial_item">
-                <img class="rounded-circle" src="~/assets/landing-page/image/testtimonial-1.jpg" alt="">
+                <img class="rounded-circle" src="~/uploaded/images/20240327/Screenshot 2024-01-21 222641.png" alt="" width="60" height="60">
                 <div class="media-body">
                     <p>As conscious traveling Paupers we must always be concerned about our dear Mother Earth. If you think about it, you travel across her face, and She is the </p>
                     <a href="#"><h4 class="sec_h4">Fanny Spencer</h4></a>
@@ -235,7 +235,7 @@
                 </div>
             </div>
             <div class="media testimonial_item">
-                <img class="rounded-circle" src="~/assets/landing-page/image/testtimonial-1.jpg" alt="">
+                <img class="rounded-circle" src="~/uploaded/images/20240323/Screenshot 2023-03-29 213015.png" alt="" width="60" height="60">
                 <div class="media-body">
                     <p>As conscious traveling Paupers we must always be concerned about our dear Mother Earth. If you think about it, you travel across her face, and She is the </p>
                     <a href="#"><h4 class="sec_h4">Fanny Spencer</h4></a>
@@ -269,10 +269,9 @@
                         </div>
                         <div class="details">
                             <div class="tags">
-                                <a href="#" class="button_hover tag_btn">Travel</a>
-                                <a href="#" class="button_hover tag_btn">Life Style</a>
+                                <a href="/blog/blog-details/@item.Id" class="button_hover tag_btn">@item.NewsType</a>
                             </div>
-                            <a href="#"><h4 class="sec_h4">@item.Title</h4></a>
+                            <a href="/blog/blog-details/@item.Id"><h4 class="sec_h4">@item.Title</h4></a>
                             <h6 class="date title_color">@item.CreatedOn</h6>
                         </div>
                     </div>
