--- a/WebApp/Views/Blog/_BlogPartial.cshtml
+++ b/WebApp/Views/Blog/_BlogPartial.cshtml
@@ -17,7 +17,7 @@
                 <ul class="blog_meta list_style">
                     <li><a href="#">@item.Author<i class="lnr lnr-user"></i></a></li>
                     <li><a href="#">@item.CreatedOn<i class="lnr lnr-calendar-full"></i></a></li>
-                    <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
+                    <li><a href="#">@item.NewsType<i class="lnr lnr-eye"></i></a></li>
                     <li><a href="#">@(item.Comments.Count() + item.Replies.Count()) Comments<i class="lnr lnr-bubble"></i></a></li>
                 </ul>
             </div>
@@ -26,7 +26,7 @@
             <div class="blog_post">
                 <img src="@item.Thumbnail" alt="" width="555" height="280">
                 <div class="blog_details">
-                    <a href="#"><h2>@item.Title</h2></a>
+                    <a href="/blog/blog-details/@item.Id"><h2>@item.Title</h2></a>
                     <p>@item.Summary</p>
                     <a href="/blog/blog-details/@item.Id" class="view_btn button_hover">View More</a>
                 </div>
@@ -34,25 +34,3 @@
         </div>
     </article>
 }
-<article class="row blog_item">
-    <div class="col-md-3">
-        <div class="blog_info text-right">
-            <ul class="blog_meta list_style">
-                <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
-                <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
-                <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
-                <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="col-md-9">
-        <div class="blog_post">
-            <img src="~/assets/landing-page/image/blog/main-blog/m-blog-1.jpg" alt="">
-            <div class="blog_details">
-                <a href="#"><h2>Astronomy Binoculars A Great Alternative</h2></a>
-                <p>MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.</p>
-                <a href="#" class="view_btn button_hover">View More</a>
-            </div>
-        </div>
-    </div>
-</article>
