--- a/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
@@ -63,7 +63,7 @@
                                             <input type="file" id="fileInputImage" style="display:none" />
                                         </div>
                                         <div class="col-sm-2">
-                                            <img id="imagePreview" src="~/assets/images/user.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
+                                            <img id="imagePreview" src="~/assets/images/picture.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
                                         </div>
                                     </div>
                                     <div class="col-sm-2 mt-1">
