--- a/WebApp/Views/Identity/SignUp.cshtml
+++ b/WebApp/Views/Identity/SignUp.cshtml
@@ -46,8 +46,14 @@
                                 <div asp-validation-summary="All" class="text-danger"></div>
                                 <div class="form-group">
                                     <label for="Firstname">@Localizer["FullName"]</label>
-                                    <input id="Firstname" type="text" class="form-control" placeholder="@Localizer["FirstName"]" asp-for="FirstName" value="@Model.FirstName">
-                                    <input id="Lastname" type="text" class="form-control" placeholder="@Localizer["LastName"]" asp-for="LastName" value="@Model.LastName">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <input id="Firstname" type="text" class="form-control" placeholder="@Localizer["FirstName"]" asp-for="FirstName" value="@Model.FirstName">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input id="Lastname" type="text" class="form-control" placeholder="@Localizer["LastName"]" asp-for="LastName" value="@Model.LastName">
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="form-group">
