--- a/WebApp/Views/Blog/BlogDetails.cshtml
+++ b/WebApp/Views/Blog/BlogDetails.cshtml
@@ -37,8 +37,9 @@
                 <div class="single-post row">
                     <div class="col-lg-12">
                         <div class="feature-img">
-                            <img class="img-fluid" src="@Model.NewsDetail.Thumbnail" alt="">
+                            <img class="img-fluid" src="@Model.NewsDetail.Thumbnail" alt="" width="750px" height="350px">
                         </div>
+                        <h2>@Model.NewsDetail.Title</h2>
                     </div>
                     <div class="col-lg-12">
                         <div class="row">     
