--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -29,61 +29,66 @@
                 </div>
                 <div class="col-md-9">
                     <div class="boking_table">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="book_tabel_item">
-                                    <div class="form-group">
-                                        <div class='input-group date' id='datetimepicker11'>
-                                            <input type='text' class="form-control" placeholder="@Localizer["ArrivalDate"]" />
-                                            <span class="input-group-addon">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                            </span>
+                        <form class="form-horizontal" role="form" id="formBooking">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="book_tabel_item">
+                                        <div class="form-group">
+                                            <div class='input-group date' id='datetimepicker11'>
+                                                <input type='text' class="form-control" placeholder="@Localizer["ArrivalDate"]" />
+                                                <span class="input-group-addon">
+                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class='input-group date' id='datetimepicker1'>
+                                                <input type='text' class="form-control" placeholder="@Localizer["DepartureDate"]" />
+                                                <span class="input-group-addon">
+                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class='input-group date' id='datetimepicker1'>
-                                            <input type='text' class="form-control" placeholder="@Localizer["DepartureDate"]" />
-                                            <span class="input-group-addon">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                            </span>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="book_tabel_item">
+                                        <div class="input-group">
+                                            <select class="wide">
+                                                <option data-display="@Localizer["Adult"]">@Localizer["Adult"]</option>
+                                                <option value="1">1 adults</option>
+                                                <option value="2">2 adults</option>
+                                                <option value="3">3 adults</option>
+                                                <option value="4">4 adults</option>
+                                            </select>
+                                        </div>
+                                        <div class="input-group">
+                                            <select class="wide">
+                                                <option data-display="@Localizer["Child"]">@Localizer["Child"]</option>
+                                                <option value="1">1 Child</option>
+                                                <option value="2">2 Child</option>
+                                                <option value="3">3 Child</option>
+                                                <option value="4">4 Child</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="book_tabel_item">
-                                    <div class="input-group">
-                                        <select class="wide">
-                                            <option data-display="@Localizer["Adult"]">@Localizer["Adult"]</option>
-                                            <option value="1">1 adults</option>
-                                            <option value="2">2 adults</option>
-                                            <option value="3">3 adults</option>
-                                        </select>
-                                    </div>
-                                    <div class="input-group">
-                                        <select class="wide">
-                                            <option data-display="@Localizer["Child"]">@Localizer["Child"]</option>
-                                            <option value="1">1 Child</option>
-                                            <option value="2">2 Child</option>
-                                            <option value="3">3 Child</option>
-                                        </select>
+                                <div class="col-md-4">
+                                    <div class="book_tabel_item">
+                                        <div class="input-group">
+                                            <select class="wide">
+                                                <option data-display="@Localizer["RoomTypes"]">@Localizer["RoomTypes"]</option>
+                                                @foreach (var item in Model.RoomTypes)
+                                                {
+                                                    <option value="@item.Id">@item.Name</option>
+                                                }
+                                            </select>
+                                        </div>
+                                        <a class="book_now_btn button_hover" href="/room">@Localizer["BookNow"]</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="book_tabel_item">
-                                    <div class="input-group">
-                                        <select class="wide">
-                                            <option data-display="Child">@Localizer["RoomTypes"]</option>
-                                            <option value="1">Room 01</option>
-                                            <option value="2">Room 02</option>
-                                            <option value="3">Room 03</option>
-                                        </select>
-                                    </div>
-                                    <a class="book_now_btn button_hover" href="#">@Localizer["BookNow"]</a>
-                                </div>
-                            </div>
-                        </div>
+                        </form> 
                     </div>
                 </div>
             </div>
