--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -137,7 +137,7 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation/dist/additional-methods.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <script src="~/client-app/shared/base.js" asp-append-version="true"></script>
+    <script src="~/admin-app/shared/base.js" asp-append-version="true"></script>
     <script src="~/assets/landing-page/js/main.js" asp-append-version="true"></script>
     <script type="text/javascript">
         $(document).ready(function () {
