--- a/WebApp/wwwroot/assets/landing-page/css/my-account.css
+++ b/WebApp/wwwroot/assets/landing-page/css/my-account.css
@@ -171,6 +171,8 @@
             background-color: #0F723A;
             color: #fff;
             border: 1px solid #0F723A;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
 .upload-image {
