--- a/WebApp/Views/Blog/BlogDetails.cshtml
+++ b/WebApp/Views/Blog/BlogDetails.cshtml
@@ -113,7 +113,7 @@
                             <input type="hidden" name="Id" id="hidId" value="0" />
                         </div>
                         <div class="form-group">
-                            <input type="hidden" name="NewsId" id="NewsId" value="@Model.NewsDetail.Id" />
+                            <input type="hidden" name="NewId" id="NewId" value="@Model.NewsDetail.Id" />
                         </div>
                         <div class="form-group">
                             <textarea class="form-control mb-10" rows="5" id="txtContent" name="Content" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
