--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -274,9 +274,9 @@
                         </div>
                         <div class="details">
                             <div class="tags">
-                                <a href="/blog/blog-details/@item.Id" class="button_hover tag_btn">@item.NewsType</a>
+                                <a href="/blog-details/@item.Id" class="button_hover tag_btn">@item.NewsType</a>
                             </div>
-                            <a href="/blog/blog-details/@item.Id"><h4 class="sec_h4">@item.Title</h4></a>
+                            <a href="/blog-details/@item.Id"><h4 class="sec_h4">@item.Title</h4></a>
                             <h6 class="date title_color">@item.CreatedOn</h6>
                         </div>
                     </div>
