--- a/WebApp/Views/Blog/_BlogPartial.cshtml
+++ b/WebApp/Views/Blog/_BlogPartial.cshtml
@@ -26,9 +26,9 @@
             <div class="blog_post">
                 <img src="@item.Thumbnail" alt="" width="555" height="280">
                 <div class="blog_details">
-                    <a href="/blog/blog-details/@item.Id"><h2>@item.Title</h2></a>
+                    <a href="/blog-details/@item.Id"><h2>@item.Title</h2></a>
                     <p>@item.Summary</p>
-                    <a href="/blog/blog-details/@item.Id" class="view_btn button_hover">View More</a>
+                    <a href="/blog-details/@item.Id" class="view_btn button_hover">View More</a>
                 </div>
             </div>
         </div>
