--- a/WebApp/Views/Room/Index.cshtml
+++ b/WebApp/Views/Room/Index.cshtml
@@ -137,7 +137,7 @@
                             <img src="@appDomain@item.Thumbnail" width="263px" height="270px" alt="post">
                             <a href="/room-details/@item.Id" class="btn theme_btn button_hover">@Localizer["BookNow"]</a>
                         </div>
-                        <a href="#"><h4 class="sec_h4">@item.Name</h4></a>
+                        <a href="/room-details/@item.Id"><h4 class="sec_h4">@item.Name</h4></a>
                         <h5>@string.Format("{0:N0} VND", item.Price)<small>@Localizer["/night"]</small></h5>
                     </div>
                 </div>
